<resources>
    <string name="app_name">PracticalTest01Var04</string>
    <string name="navigate_to_secondary_activity">Navigate To Secondary Activity</string>
    <string name="perfect_student">Perfect Student</string>
    <string name="nume">Nume</string>
    <string name="grupa">Grupa</string>
    <string name="display_information">DISPLAY INFORMATION</string>
    <string name="datele">datele</string>
    <string name="navigate_to_secondary_acitivity">NAVIGATE TO SECONDARY ACITIVITY</string>
</resources>